Introduce spotless